# rule-based-classifier

./: .gitignore  README.md  classifier.py  pyproject.toml
src/: test.py
src/survey_classifier/: __init__.py  classifier.py  classify_and_update.py  cli.py  keywords_config.py  run.py  utils.py
