[project]
name = "survey-classifier"
version = "0.1.0"
description = "CLI tool to classify survey questions"
authors = [{ name = "Zidane Gimiga", email = "hellozidanegimiga@gmail.com" }]
dependencies = [
    "typer[all]",
    "pymongo",
    "nltk"
]
requires-python = ">=3.10"

[project.scripts]
survey-classifier = "survey_classifier.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["survey_classifier*"]
